fixed issue where description overflowing

--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -59,9 +59,10 @@
         }
 
         .description {
-            font-size         : 14px;
+            font-size         : 13px;
             margin-bottom     : 5px;
             color             : white;
+            margin-right: 25px;
             font-weight       : 700;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
